--- a/index.html
+++ b/index.html
@@ -2789,8 +2789,7 @@
   {
     "question": "القرص الصلب يُعد من وحدات الإدخال والإخراج.",
     "options": ["صح", "خطأ"],
-    "answer": "خطأ",
-    "explanation": "القرص الصلب يُعد من وحدات التخزين، وليس من وحدات الإدخال أو الإخراج."
+    "answer": "صح",
   },
   {
     "question": "الاختصار Ctrl + V يُستخدم لنسخ المحتوى.",
