--- a/index.html
+++ b/index.html
@@ -2790,6 +2790,8 @@
     "question": "القرص الصلب يُعد من وحدات الإدخال والإخراج.",
     "options": ["صح", "خطأ"],
     "answer": "صح",
+        "explanation": "القرص الصلب يُعد من وحدات التخزين، وايضا من وحدات الإدخال أو الإخراج."
+
   },
   {
     "question": "الاختصار Ctrl + V يُستخدم لنسخ المحتوى.",
