--- a/index.html
+++ b/index.html
@@ -5989,7 +5989,399 @@
     "options": ["Ctrl + F12", "Alt + F12", "F12", "Shift + F12"],
     "answer": "Ctrl + F12",
     "explanation": "الاختصار Ctrl + F12 يفتح مربع حوار 'فتح ملف' في برنامج Word."
+  },
+ {
+    "question": "للبحث العلمي، من أين يمكن الحصول على المراجع؟",
+    "options": ["Google",  "MS Explorer", "Web Browser"],
+    "answer": "Google"
+  },
+  {
+    "question": "أي مما يلي لا يُعتبر نظام تشغيل؟",
+    "options": ["ويندوز XP", "ويندوز XL", "ويندوز 2000", "ويندوز 98"],
+    "answer": "ويندوز XL"
+  },
+  {
+    "question": "مجموعة بيانات منظمة تُسمّى:",
+    "options": ["File", "Database قاعدة بيانات ", "مجلد", "أرشيف"],
+    "answer": "Database قاعدة بيانات "
+  },
+  {
+    "question": "امتداد ‎.HTML يُستخدم في:",
+    "options": ["إنشاء صفحات الويب", "الصور", "الفيديو", "المستندات"],
+    "answer": "إنشاء صفحات الويب"
+  },
+  {
+    "question": "من مكونات الحاسب / أهم شيء في الحاسوب:",
+    "options": ["نظام التشغيل", "الطابعة", "الماسح الضوئي", "السماعات"],
+    "answer": "نظام التشغيل"
+  },
+  {
+    "question": "ما اسم مجموعة صفحات الويب المرتبطة ببعضها عبر روابط تشعّبية؟",
+    "options": ["موقع إلكتروني", "إنترنت", "دليل ويب", "شبكة ويب"],
+    "answer": "موقع إلكتروني"
+  },
+  {
+    "question": "إذا كان لديك نصوص ومعالجات وروابط وبيانات داخل مجموعة صفحات إلكترونية؟",
+    "options": ["ارتباط تشعبي", "صفحة إلكترونية", "موقع إلكتروني", "ملف إلكتروني"],
+    "answer": "موقع إلكتروني"
+  },
+  {
+    "question": "ما هي الذاكرة الرئيسية في الحاسب الآلي؟",
+    "options": ["RAM", "ROM", "RAM و ROM", "HDD"],
+    "answer": "RAM و ROM"
+  },
+  {
+    "question": "الماسح الضوئي (Scanner) وظيفته التخزين فقط:",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+  {
+    "question": "عقل الحاسوب (CPU):",
+    "options": ["إدخال البيانات", "إدخال ومعالجة البيانات", "المعالجة", "الإدخال والإخراج"],
+    "answer": "المعالجة"
+  },
+  {
+    "question": "من تطبيقات الأوفيس المستخدمة في المطارات لإدارة الجداول والبيانات:",
+    "options": ["Word", "Access", "Excel"],
+    "answer": "Excel"
+  },
+  {
+    "question": "الأسهم في لوحة المفاتيح تقف في الخلية أو تحدد الخلية:",
+    "options": ["صح", "خطأ"],
+    "answer": "صح"
+  },
+  {
+    "question": "تطبيق الأوفيس المستخدم لكتابة النصوص والمستندات:",
+    "options": ["Word", "Access", "Excel"],
+    "answer": "Word"
+  },
+  {
+    "question": "أي موقع يتيح أكبر قدر من التحكم في المحتوى (حفظ – تعديل – حذف):",
+    "options": ["فيسبوك", "تويتر", "جوجل درايف", "إنستغرام"],
+    "answer": "جوجل درايف"
+  },
+  {
+    "question": "كيف نقص جزء من الصورة أو إطار الفيديو؟",
+    "options": ["Crop", "Trim", "File", "Cut"],
+    "answer": "Crop"
+  },
+  {
+    "question": "أداة إزالة بداية أو نهاية مقطع الفيديو:",
+    "options": ["Crop", "Trim", "File", "Cut"],
+    "answer": "Trim"
+  },
+  {
+    "question": "مفتاح الوظائف لتحرير محتوى خلية في Excel:",
+    "options": ["F7", "F2", "F3", "F4"],
+    "answer": "F2"
+  },
+  {
+    "question": "مفتاح الوظائف الخاص بالمراجعة أو التدقيق في Word:",
+    "options": ["F1", "F5", "F12", "F7"],
+    "answer": "F7"
+  },
+  {
+    "question": "لتكرار شريحة في PowerPoint:",
+    "options": ["Ctrl + C", "Ctrl + V", "Ctrl + D", "Ctrl + N"],
+    "answer": "Ctrl + D"
+  },
+  {
+    "question": "عند الوصول لصفحة ويب، نستخدم في الحاسب عنوان:",
+    "options": ["HTTP", "URL"],
+    "answer": "URL"
+  },
+
+
+     {
+          question: "ما اسم متجر تطبيقات هواتف الأندرويد؟",
+          options: ["Google Play Store", "Amazon", "Alexa", "لا شيء مما سبق"],
+          answer: "Google Play Store",
+        },
+        {
+          question: "مؤتمرات الفيديو التي توصل الأشخاص عبر الفيديو تُعرف باسم:",
+          options: [
+            "Video Conference",
+            "Email",
+            "Text Messaging",
+            "Audio Player",
+          ],
+          answer: "Video Conference",
+        },
+        {
+          question: "منصة تواصل اجتماعي يتفاعل فيها الناس بالمنشورات القصيرة:",
+          options: ["Facebook", "Instagram", "Twitter", "TikTok"],
+          answer: "Twitter",
+        },
+        {
+          question: "الملف المضغوط هو:",
+          options: [
+            "ملف تم ضغط حجمه باستخدام خوارزمية ضغط",
+            "ملف صوتي",
+            "ملف غير قابل للفتح",
+            "ملف ينشئ نسخة من النظام",
+          ],
+          answer: "ملف تم ضغط حجمه باستخدام خوارزمية ضغط",
+        },
+        {
+          question: "إرسال البريد الإلكتروني يُعادله:",
+          options: ["لا شيء", "إرسال طرد", "كتابة رسالة", "الاتصال هاتفيًا"],
+          answer: "كتابة رسالة",
+        },
+        {
+          question: "أي مما يلي يُعد جهاز إدخال وإخراج معا؟",
+          options: ["الشاشة", "الذاكرة الرقمية", "الطابعة", "الفأرة"],
+          answer: "الذاكرة الرقمية",
+        },
+
+        {
+          question: "ما الهدف من برامج إزالة الفيروسات؟",
+          options: [
+            "منع وإزالة البرامج الضارة والفيروسات من الجهاز",
+            "تنظيف الشاشة",
+            "تسريع الطابعة",
+            "حماية الجهاز والاحتفاظ بالبيانات",
+          ],
+          answer: "منع وإزالة البرامج الضارة والفيروسات من الجهاز",
+        },
+        {
+          question:
+            "تتفاعل وحدة المعالجة المركزية مباشرة مع أي نوع من الذاكرة أثناء تنفيذ البرنامج؟",
+          options: ["RAM", "Hard Disk", "Magnetic Tape", "SSD"],
+          answer: "RAM",
+        },
+        {
+          question:
+            "أي من الذواكر التالية تُعد جزءًا من الذاكرة الأساسية السريعة؟",
+          options: ["ROM", "Flash", "Cache Memory", "Hard Disk"],
+          answer: "Cache Memory",
+        },
+        {
+          question:
+            "أي من الذواكر التالية تُعد الذاكرة الرئيسية أثناء تنفيذ البرامج؟",
+          options: ["RAM", "ROM", "Flash", "SSD"],
+          answer: "RAM",
+        },
+        {
+          question: "الدالة التي تستخدم عند تحقق الشرط في Excel هي:",
+          options: ["IF", "AVERAGE", "SUM", "COUNT"],
+          answer: "IF",
+        },
+        {
+          question: "جدول البيانات في Excel يمكن التعديل عليه؟",
+          options: ["صح", "خطأ"],
+          answer: "صح",
+        },
+        {
+          question: "يُستخدم HTML لتنظيم وتضمين ماذا داخل صفحات الويب؟",
+          options: ["صورة", "صوت", "فيديو", "نص", "جميع ما سبق"],
+          answer: "جميع ما سبق",
+        },
+        {
+          question: "المجلد عبارة عن:",
+          options: ["ملف", "برنامج", "مكان لتجميع الملفات", "لوحة تحكم"],
+          answer: "مكان لتجميع الملفات",
+        },
+        {
+          question: "مرفق البريد الإلكتروني عبارة عن:",
+          options: ["نص الرسالة", "خانة العنوان", "ملف مرفق", "توقيع الرسالة"],
+          answer: "ملف مرفق",
+        },
+        {
+          question: "لعمل مسافة بين الكلمات في Word نضغط:",
+          options: ["Enter", "Shift", "Space", "Ctrl"],
+          answer: "Space",
+        },
+        {
+          question:
+            "في الإصدارات القديمة من الإكسل كان اسم الأوراق Sheet1 وSheet2 وSheet3.",
+          options: ["صح", "خطأ"],
+          answer: "صح",
+        },
+        {
+          question:
+            "في الباوربوينت يمكن التحكم في سرعة عرض الشرائح أثناء التشغيل.",
+          options: ["صح", "خطأ"],
+          answer: "خطأ",
+        },
+        {
+          question: "هل يمكن التحكم في سرعة عرض الشرائح في PowerPoint؟",
+          options: ["صح", "خطأ"],
+          answer: "صح",
+        },
+        {
+          question: "لتحديد صف كامل نضغط على حرف الصف.",
+          options: ["صح", "خطأ"],
+          answer: "خطأ",
+        },
+
+
+  {
+    "question": "أي من المخططات التالية يُستخدم للمقارنة بين فئات معيّنة؟",
+    "options": ["مخطط عمودي", "مخطط خطي", "مخطط دائري", "مخطط نسيج"],
+    "answer": "مخطط عمودي"
+  },
+  {
+    "question": "هل حذف الشريحة يتم بـ Shift + M؟",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+  {
+    "question": "أي من مراجع الخلايا التالية غير صحيحة في Excel؟",
+    "options": ["Q 37", "F7", "A1", "B5"],
+    "answer": "Q 37"
+  },
+  {
+    "question": "كم عدد أشرطة التمرير في برنامج وورد الحديث؟",
+    "options": ["2", "1", "3", "4"],
+    "answer": "2"
+  },
+  {
+    "question": "ما هو الأهم لتشغيل الحاسب؟",
+    "options": ["وحدة المعالجة المركزية", "القرص الصلب", "لوحة المفاتيح", "الشاشة"],
+    "answer": "وحدة المعالجة المركزية"
+  },
+  {
+    "question": "ما هي الوظيفة الأساسية لبرنامج تحرير الفيديو؟",
+    "options": ["إنشاء وتحرير المستندات النصية", "إدارة موارد الأجهزة", "إنشاء وتحرير محتوى الفيديو", "تصفح الإنترنت"],
+    "answer": "إنشاء وتحرير محتوى الفيديو"
+  },
+  {
+    "question": "ما هي الوظيفة الأساسية لنظام التشغيل؟",
+    "options": ["إدارة موارد الكمبيوتر والتحكم في الأجهزة والبرامج", "كتابة المستندات فقط", "تشغيل الإنترنت فقط", "تعديل الصور والفيديوهات فقط"],
+    "answer": "إدارة موارد الكمبيوتر والتحكم في الأجهزة والبرامج"
+  },
+  {
+    "question": "ما هي وظيفة وحدة التحكم في الحاسب؟",
+    "options": ["تنظيم حركة البيانات بين الأجهزة", "تخزين البيانات", "عرض المعلومات", "تبريد المكونات"],
+    "answer": "تنظيم حركة البيانات بين الأجهزة"
+  },
+  {
+    "question": "ما هو الشيء الذي يكون ملحقًا مع جهاز الكمبيوتر؟",
+    "options": ["لوحة المفاتيح", "الكتاب", "الطابعة فقط", "الهاتف"],
+    "answer": "لوحة المفاتيح"
+  },
+  {
+    "question": "لتحديد العناصر غير المتقاربة في وورد نستخدم Shift.",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+
+  {
+    "question": "لو جالك سؤال عن استخدام النظارات الذكية، أي الإجابات التالية صحيحة؟",
+    "options": [
+      "عرض المعلومات مباشرة أمام العين",
+      "دعم الواقع المعزز (AR)",
+      "متابعة البيانات الصحية أو النشاط البدني",
+      "التحكم في الأجهزة أو التطبيقات الأخرى عن طريق الأوامر الصوتية أو اللمس"
+    ],
+    "answer": [
+      "عرض المعلومات مباشرة أمام العين",
+      "دعم الواقع المعزز (AR)",
+      "متابعة البيانات الصحية أو النشاط البدني",
+      "التحكم في الأجهزة أو التطبيقات الأخرى عن طريق الأوامر الصوتية أو اللمس"
+    ]
+  },
+  {
+    "question": "الجيجا بايت أكبر من الكيلو بايت",
+    "options": ["صح", "خطأ"],
+    "answer": "صح"
+  },
+  {
+    "question": "نستخدم أي أمر لترتيب الخلايا حسب ترتيب معين؟",
+    "options": ["Filter", "Copy", "Sort", "Delete"],
+    "answer": "Sort"
+  },
+  {
+    "question": "يُستخدم في التجارة الإلكترونية:",
+    "options": ["الإنترنت", "الإنترانت", "الإكسترانت", "الشبكة المحلية"],
+    "answer": "الإنترنت"
+  },
+  {
+    "question": "لتحديد خلايا في عمودين في Excel نستخدم:",
+    "options": ["السحب بالفأرة", "النقر المزدوج", "مفتاح الحذف", "الطباعة"],
+    "answer": "السحب بالفأرة"
+  },
+  {
+    "question": "تعريف الحاسب هو:",
+    "options": ["أجهزة مرئية فقط", "شبكة من الأجهزة", "آلة إلكترونية لمعالجة المعلومات", "وسيلة لتخزين الصوت فقط"],
+    "answer": "آلة إلكترونية لمعالجة المعلومات"
+  },
+  {
+    "question": "لنقل ملف إلى قرص صلب آخر نستخدم:",
+    "options": ["السحب والإفلات", "النسخ واللصق", "الحذف", "الطباعة"],
+    "answer": "النسخ واللصق"
+  },
+  {
+    "question": "لنقل ملف داخل نفس القرص الصلب نستخدم:",
+    "options": ["السحب والإفلات", "النسخ واللصق", "الحذف", "الطباعة"],
+    "answer": "السحب والإفلات"
+  },
+  {
+    "question": "السجل في Access يتكوّن من:",
+    "options": ["عدة جداول", "عدة نماذج", "صف واحد من عدة حقول"],
+    "answer": "صف واحد من عدة حقول"
+  },
+  {
+    "question": "برنامج يُستخدم في تحرير الصور:",
+    "options": ["Microsoft Word", "Microsoft Excel", "Adobe Photoshop"],
+    "answer": "Adobe Photoshop"
+  },
+  {
+    "question": "مفتاح F12 يُستخدم لفتح:",
+    "options": ["فتح مربع حفظ باسم (Save As)", "البحث", "الطباعة", "الإعدادات"],
+    "answer": "فتح مربع حفظ باسم (Save As)"
+  },
+  {
+    "question": "أي مما يلي ليس من أنواع Windows:",
+    "options": ["Windows 8", "Windows XP", "Windows Pro", "Windows 2008"],
+    "answer": "Windows Pro"
+  },
+  {
+    "question": "لتحديد فقرة نضغط على الزر الأيمن للفأرة ونسحب.",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+  {
+    "question": "الـ ALU تشمل:",
+    "options": ["الجمع والطرح والضرب والقسمة", "إدخال البيانات فقط", "تخزين البيانات", "عرض النتائج"],
+    "answer": "الجمع والطرح والضرب والقسمة"
+  },
+  {
+    "question": "يمكن وضع صور وفيديو في برنامج:",
+    "options": ["Word", "Excel", "Access", "PowerPoint"],
+    "answer": "PowerPoint"
+  },
+  {
+    "question": "هل يمكن إدراج جدول في شريحة باوربوينت؟",
+    "options": ["لا", "نعم"],
+    "answer": "نعم"
+  },
+  {
+    "question": "تتم عملية المعالجة في الحاسب:",
+    "options": ["إخراج - معالجة - إدخال", "إدخال - معالجة - إخراج", "معالجة - إدخال - إخراج", "إدخال - إخراج - معالجة"],
+    "answer": "إدخال - معالجة - إخراج"
+  },
+  {
+    "question": "ما هو البرنامج الذي يمكن استخدامه لعمل ميزانية؟",
+    "options": ["Excel", "Word", "PowerPoint", "Paint"],
+    "answer": "Excel"
+  },
+  {
+    "question": "إذا أردنا حفظ نص فقط، أي من الملفات التالية نختار؟",
+    "options": [".txt", ".ppt", ".xls", ".doc"],
+    "answer": ".txt"
+  },
+  {
+    "question": "المصنف في Excel يُعرف باسم Worksheet.",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+  {
+    "question": "امتداد الملف التنفيذي هو:",
+    "options": ["exe", "sys", "txt", "doc"],
+    "answer": "exe"
   }
+
 
 
   ]
