--- a/index.html
+++ b/index.html
@@ -6713,6 +6713,135 @@
 
 
 
+
+,  {
+    "question": "أي من التالي لا يعتبر امتداد صورة؟",
+    "options": [".PNG", ".GIF", ".JPG", ".PPT"],
+    "answer": ".PPT"
+  },
+  {
+    "question": "الكاميرا والفأرة نتحكم فيهما عن طريق:",
+    "options": ["برنامج الحماية", "نظام التشغيل", "برنامج الصوت", "برنامج الكتاب"],
+    "answer": "نظام التشغيل"
+  },
+  {
+    "question": "لما أكون عايزة أكتب نص طويل أستخدم أي برنامج؟",
+    "options": ["Excel", "Word", "PowerPoint", "Painter"],
+    "answer": "Word"
+  },
+  {
+    "question": "طريقة عرض العناصر المختلفة نختار أي؟",
+    "options": ["إدراج", "أدوات", "عرض (View)", "تصميم"],
+    "answer": "عرض (View)"
+  },
+  {
+    "question": "الحاجات العشوائية تُسمّى:",
+    "options": ["ثابتة", "عشوائية Random", "مرتّبة", "منظمة"],
+    "answer": "عشوائية Random"
+  },
+  {
+    "question": "أيٌّ مما يلي يعد من صيغ ملفات الصوت؟",
+    "options": ["WAV", "PPT", "DOC", "MOV"],
+    "answer": "WAV"
+  },
+  {
+    "question": "عرض الشرائح في البوربوينت نضغط على مفتاح:",
+    "options": ["F12", "F5", "F2", "F9"],
+    "answer": "F5"
+  },
+  {
+    "question": "نظام التشغيل الذي يعمل به نظام أندرويد:",
+    "options": ["Windows", "Android OS", "macOS", "Linux"],
+    "answer": "Android OS"
+  },
+  {
+    "question": "ما هو نظام التشغيل القديم الذي يعتمد على لوحة المفاتيح فقط؟",
+    "options": ["macOS", "DOS", "Windows", "Linux"],
+    "answer": "DOS"
+  },
+  {
+    "question": "أيٌّ من أنظمة التشغيل التالية غير موجود؟",
+    "options": ["Windows XP", "Windows 7", "Linux", "Windows LP"],
+    "answer": "Windows LP"
+  },
+  {
+    "question": "أيٌّ من أنظمة التشغيل التالية غير موجود؟",
+    "options": ["Windows XP", "Windows 7", "Linux", "WINDOWS-96"],
+    "answer": "WINDOWS-96"
+  },
+  {
+    "question": "أيٌّ من أنظمة التشغيل التالية غير موجود؟",
+    "options": ["Windows XP", "Windows 7", "Linux", "Windows 97-2003"],
+    "answer": "Windows 97-2003"
+  },
+  {
+    "question": "أيٌّ من التالي ليس إصدارًا من نظام تشغيل ويندوز لأجهزة الحاسوب الشخصي؟",
+    "options": ["ME", "98", "XP", "Linux", "95"],
+    "answer": "Linux"
+  },
+  {
+    "question": "أصغر وحدة لتمثيل البيانات داخل الحاسوب:",
+    "options": ["البايت", "الميجابايت", "البِت Bit", "الكيلوبايت"],
+    "answer": "البِت Bit"
+  },
+  {
+    "question": "أيٌّ مما يلي ليس من أنواع الأقراص المضغوطة؟",
+    "options": ["DVD", "CD", "Blu-ray", "Flash Memory"],
+    "answer": "Flash Memory"
+  },
+  {
+    "question": "لماذا نقوم بعملية تهيئة القرص (Format)؟",
+    "options": [
+      "حذف البيانات بحثًا عن التهديدات",
+      "حفظ المعلومات والملفات",
+      "حذف جميع البيانات وتجهيز القرص للاستخدام الجديد",
+      "تحديث نظام التشغيل"
+    ],
+    "answer": "حذف جميع البيانات وتجهيز القرص للاستخدام الجديد"
+  },
+  {
+    "question": "في Excel، الـ KK و BB تعتبر:",
+    "options": ["صفوف", "أعمدة", "صف وعمود", "خلايا مدمجة"],
+    "answer": "أعمدة"
+  },
+  {
+    "question": "هل حجم الشاشة يؤثر على سرعة الجهاز؟",
+    "options": ["صح", "خطأ"],
+    "answer": "خطأ"
+  },
+  {
+    "question": "يتم قياس دقة الشاشة بالبيكسل باستخدام وحدة:",
+    "options": ["Hz", "PPI", "cm", "DPI"],
+    "answer": "PPI"
+  },
+  {
+    "question": "في Excel، لتحديد خلية يجب معرفة:",
+    "options": ["رقم الصف فقط", "حرف العمود فقط", "حرف العمود + رقم الصف مثل A1", "لون الخلية"],
+    "answer": "حرف العمود + رقم الصف مثل A1"
+  },
+  {
+    "question": "يمتاز الحاسب المحمول عن الحاسب الشخصي بأنه:",
+    "options": [
+      "يمكن نقله في أي مكان",
+      "يعمل بالبطارية دون الحاجة للتيار الكهربائي",
+      "الاثنان معًا (يمكن نقله ويعمل بالبطارية)",
+      "لا شيء مما سبق"
+    ],
+    "answer": "الاثنان معًا (يمكن نقله ويعمل بالبطارية)"
+  },
+  {
+    "question": "أيٌّ مما يلي يُمكن فعله باستخدام أداة التدقيق الإملائي والنحوي في مايكروسوفت وورد ؟",
+    "options": [
+      "تحديد الأخطاء النحوية",
+      "تصحيح الأخطاء الإملائية أثناء الكتابة",
+      "تحديد الكلمات التي بها أخطاء في استخدام الأحرف الكبيرة",
+      "جميع ما سبق"
+    ],
+    "answer": "جميع ما سبق"
+  }
+  // نموذج 44
+
+
   ]
 
     let currentQuestion = 0;
